--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,5 @@
+/* inspiração pro card - card dos autores - http://react-toolbox.com/ */
+
 body {
   width: 100%;
   height: 100vh;
@@ -83,13 +85,20 @@ body {
   flex-direction: row;
 }
 
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .input {
   border: none;
   border-bottom: 1px solid #000;
   outline: none;
   width: 20%;
 }
-
 
 .goButton {
   border:none;
